# trump-0.0-minus42B

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  chat.py  constants.py  data.py  data_types.py  deepspeed.yaml  docker-compose.yml  download.py  download_types.py  generate.py  generator_prompt.json  main.py  normalize.py  normalize_prompt.json  normalizer_prompt.yml  prepare.py  prepare_common.py  prepare_generator_model.py  prepare_normalizer_model.py  prepare_reward_model.py  prepare_types.py  pyproject.toml  scrap.py  teach.py  train.py  tune.py
.github/workflows/: test.yml
_types/: database_types.py  generator_types.py
data/: 0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0024.json  0025.json  0026.json  0027.json  0028.json  0029.json  0030.json  0031.json  0032.json  0033.json  0034.json  0035.json  0036.json  0037.json  0038.json  0039.json  0040.json  (+1694 more)
data/posts/: 0001.json  0003.json  0004.json  0005.json  0007.json  0008.json  0009.json  0010.json  0013.json  0014.json  0016.json  0018.json  0020.json  0021.json  0023.json  0025.json  0027.json  0029.json  0030.json  0031.json  0032.json  0034.json  0040.json  0041.json  0042.json  0043.json  0047.json  0051.json  0056.json  0058.json  0059.json  0062.json  0063.json  0064.json  0065.json  0067.json  0069.json  0072.json  0073.json  0076.json  (+769 more)
libs/: __init__.py  clean_post_text_with_llm.py  clean_post_text_with_llm_test.py  database.py  initialize_database.py  post_normalizer.py  post_normalizer_test.py  preference_dataset_manager.py
public/: index.html
scripts/docker/: entrypoint.sh  start.sh
utils/: __init__.py  clean_post_text.py  clean_post_text_test.py  generate_post_id.py  get_input_key.py  get_terminal_width.py  print_boxed_text.py  print_error_and_exit.py  print_horizontal_line.py
