[project]
name = "Trump-0.0-minus42B"
description = "A really dumb and opinionated LLM — exclusively trained on Donald J. Trump's social media posts."
license = { text = "MIT" }
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "accelerate>=0.26.0",
  "datasets==3.6.0",
  "nltk==3.9.1",
  "pendulum==3.1.0",
  "protobuf==6.31.1",
  "selenium==4.33.0",
  "torch==2.7.1",
  "transformers==4.52.4",
]

[dependency-groups]
dev = [
  "huggingface-hub==0.32.4",
  "mypy==1.16.0",
  "pydantic==2.11.5",
  "pytest==8.4.0",
  "ruff==0.11.13",
  "types-requests==2.32.0.20250602",
]


[tool.ruff]
line-length = 120
