[project]
name = "Trump-0.0-minus42B"
description = "A really dumb and opinionated LLM — exclusively trained on Donald J. Trump's social media posts."
license = { text = "MIT" }
version = "0.0.0"
readme = "README.md"

# https://github.com/huggingface/trl/issues/2377#issuecomment-2503234915
# requires-python = ">=3.13"
requires-python = "==3.12.*"
dependencies = [
  # https://github.com/huggingface/trl/issues/2377#issuecomment-2503234915
  # "accelerate===1.7.0",
  "accelerate==0.34.2",
  "bitsandbytes==0.46.0",
  "datasets==3.6.0",
  "deepspeed>=0.17.1",
  "nltk==3.9.1",
  "numpy==2.3.0",
  "peft==0.15.2",
  "pendulum==3.1.0",
  "protobuf==6.31.1",
  "pydantic-yaml==1.5.1",
  "selenium==4.33.0",
  # https://github.com/huggingface/trl/issues/2377#issuecomment-2503234915
  # "torch==2.7.1",
  "torch==2.4.*",
  "tqdm==4.67.1",
  # https://github.com/huggingface/trl/issues/2377#issuecomment-2503234915
  # "transformers==4.52.4",
  "transformers==4.50.*",
  "trl==0.18.1",
  "validators==0.35.0",
]

[dependency-groups]
dev = [
  "huggingface-hub==0.32.4",
  "mypy==1.16.0",
  "pydantic==2.11.5",
  "pytest==8.4.0",
  "ruff==0.11.13",
  "types-requests==2.32.0.20250602",
]


[tool.ruff]
line-length = 120
